adde some features in order com and shop com

--- a/src/Components/OrderReview/OrderReview.css
+++ b/src/Components/OrderReview/OrderReview.css
@@ -5,3 +5,12 @@
 
     height: 100vh;
 }
+.order-procced{
+    border: 1px solid white;
+  
+    background-color: #1C2B35;
+    cursor: pointer;
+    color: white;
+    padding: 6px 13px;
+    
+}
