--- a/src/Components/CartItem/CartItem.css
+++ b/src/Components/CartItem/CartItem.css
@@ -1,7 +1,8 @@
-.img{
+.img {
     width: 100px;
-    margin:0px 10px ;
+    margin: 0px 10px;
 }
+
 .cart-item {
     display: flex;
     border-radius: 7px;
@@ -12,17 +13,24 @@
     margin: 30px 0px;
     position: relative;
 }
+
 .cart-item button {
     position: absolute;
-    top:50%;
+    top: 50%;
     right: 0px;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     border: none;
-    background-color: red;
+    background-color: rgba(255, 0, 0, 0.356);
     padding: 8px 12px;
-    border-radius: 4px;
     cursor: pointer;
     color: white;
 
+    border-radius: 10px;
+}
 
+.trash-icon {
+    border: none;
+    
+    color: red;
+    font-size: 18px;
 }
