--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -17,6 +17,7 @@
     color: white;
     padding: 20px 20px;
     
+    
 }
 .cart-container h3 {
     display: inline-block;
@@ -30,4 +31,13 @@
 .cart-container hr{
    border: 1px solid white;
    margin: 10px 0px;
+}
+.order-review{
+    border: 1px solid white;
+  
+    background-color: #1C2B35;
+    cursor: pointer;
+    color: white;
+    padding: 6px 13px;
+    
 }
