--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,10 +1,14 @@
 nav{
     width: 100%;
+    position: sticky;
+    top: 0;
     height: 80px;
     background-color: #1C2B35;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 999;
+    
     padding: 0px 80px;
 }
 .links a {
@@ -15,4 +19,10 @@ nav{
 }
 .links a:hover {
     color: #fda622;
+}
+.header-button{
+    padding: 4px 12px;
+    cursor: pointer;
+    border-radius: 3px;
+    border: none;
 }
